feat(web): add user product browse APIs